# vendini-flow

./: .gitignore  requirements.txt  setup.cfg
git_vendini/: cmd.py
