[metadata]
name = git-vendini
summary = Tool to handle the Vendini git workflow
description-file = README.rst
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = git vendini
author = Stéphane Bisinger
author-email = stephane.bisinger@gmail.com
home-page = http://www.vendini.com/

[files]
packages =
    git_vendini

[entry_points]
console_scripts =
    git-vendini = git_vendini.cmd:main

[wheel]
universal = 1

[pbr]
warnerrors = True
